# Trans-Atlantic-Bot

./: .gitignore  .replit  Procfile  README.md  alive.py  main.py  pyproject.toml  requirements.txt  server.py  stop.py  test.py
BOT/: crypto_bot.py  main.py
docs/: index.html  main.css
