[tool.poetry]
name = "repl_python3_Trans-Atlantic-Bot"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
pbkdf2 = "^1.3"
pyaes = "^1.6.1"
pycryptodomex = "^3.9.8"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
